--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="create_an_account">Create an Account</string>
     <string name="registration">Registration</string>
     <string name="email_address">Email address</string>
     <string name="confirm_password">Confirm password</string>
@@ -11,7 +12,7 @@
     <string name="phone_number">Phone number</string>
     <string name="product_description">Termékleírás.</string>
     <string name="login_with_google">Login with Google</string>
-    <string name="login_as_guest">Login as Guest</string>
+    <string name="login_as_guest">Continue as Guest</string>
     <string name="item_name_placeholder">Item name</string>
     <string name="item_expiration_date_placeholder">Expiration date</string>
     <string name="increase_amount_btn">+</string>
@@ -21,6 +22,10 @@
     <string name="welcome_message_subtitle">Keep your kitchen organized and your groceries fresh. Let’s get started!</string>
     <string name="register_message_title">Register to SmartFridge</string>
     <string name="register_message_subtitle">Create your account to organize your kitchen!</string>
+    <string name="search">Search</string>
+    <string name="view">View</string>
+    <string name="settings">Settings</string>
+    <string name="log_out">Log out</string>
     <string-array name="regions">
         <item>Africa</item>
         <item>Asia</item>
